--- a/todo-app/src/Components/Todo/styles.scss
+++ b/todo-app/src/Components/Todo/styles.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: #007bff;
+    background-color: #29aee2;
     color: white;
     padding: 20px;
     text-align: center;
@@ -39,7 +39,7 @@ header {
   }
   
   button[type="submit"] {
-    background-color: #007bff;
+    background-color: #29aee2;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -48,5 +48,5 @@ header {
   }
   
   button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #e61515;
   }
