--- a/todo-app/src/Components/Footer/Footer.scss
+++ b/todo-app/src/Components/Footer/Footer.scss
@@ -1,8 +1,8 @@
 footer {
-    background-color: #333; /* Background color for the footer */
-    color: #070000; /* Text color */
-    padding: 10px 0; /* Padding for top and bottom */
-    text-align: center; /* Center-align text */
-    font-size: 14px; /* Font size */
+    background-color: #333;
+    color: #f8f5f5;
+    padding: 10px 0; 
+    text-align: center; 
+    font-size: 14px; 
   }
   
